--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">NG-FORO</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <img src="assets/image/abajo.png" class="dropdown" style="float: left;">
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
