--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,9 @@
     border-radius: 20%;
     position: absolute;
 }
+
+.dropdown{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+}
